# meshReader

./: .gitmodules  CMakeLists.txt  build.bat  clean.bat  run.bat  runtest.bat
src/: main.cpp  test.cpp
